{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 835,
  "lineage": "f4325177-617f-b26e-1052-5c68099980df",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023f86d8d93d4aade",
            "arn": "arn:aws:ec2:eu-west-1:140611470101:instance/i-06303819660543660",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06303819660543660",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dilan-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-01b216ca5137e2853",
            "private_dns": "ip-10-0-0-238.eu-west-1.compute.internal",
            "private_ip": "10.0.0.238",
            "public_ip": "34.247.189.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0089e41c7bcae9506",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b00022d8841eb12f",
            "tags": {
              "name": "Eng48-dilan-app-app instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ada6d278fe1dc707"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm",
            "module.app.aws_subnet.app_subnet",
            "module.db.aws_instance.db_instance",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-004bb45deb4d73ed5",
            "arn": "arn:aws:ec2:eu-west-1:140611470101:instance/i-00cc7e88c7084f516",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00cc7e88c7084f516",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dilan-aws",
            "monitoring": false,
            "primary_network_interface_id": "eni-0a8359298e67ddc5f",
            "private_dns": "ip-10-0-1-160.eu-west-1.compute.internal",
            "private_ip": "10.0.1.160",
            "public_ip": "34.251.174.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f597c7cf92497f4c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df39404fa19fd8c5",
            "tags": {
              "name": "Eng48-dilan-app-db instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ada6d278fe1dc707"
            ]
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm",
            "module.db.aws_subnet.db_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fa247390e9d97ec1",
            "owner_id": "140611470101",
            "tags": {
              "Name": "Eng48-dilan-app"
            },
            "vpc_id": "vpc-021865930a930ef9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fa7487a764cab045",
            "owner_id": "140611470101",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa247390e9d97ec1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "Eng48-dilan-app"
            },
            "vpc_id": "vpc-021865930a930ef9a"
          },
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b50bca96cebddbb",
            "route_table_id": "rtb-0fa7487a764cab045",
            "subnet_id": "subnet-0b00022d8841eb12f"
          },
          "dependencies": [
            "aws_internet_gateway.app_internet_gateway",
            "aws_vpc.app_vpc",
            "module.app.aws_route_table.app_route_table",
            "module.app.aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_dm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:140611470101:security-group/sg-0ada6d278fe1dc707",
            "description": "Allow 80 TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ada6d278fe1dc707",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_security_dm",
            "name_prefix": null,
            "owner_id": "140611470101",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Eng48-dilan-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-021865930a930ef9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_dm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:140611470101:security-group/sg-09cae804702f641e4",
            "description": "Allow inbound traffic from app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cae804702f641e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ada6d278fe1dc707"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ada6d278fe1dc707"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "db_security_dm",
            "name_prefix": null,
            "owner_id": "140611470101",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "Eng48-dilan-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-021865930a930ef9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc",
            "module.app.aws_security_group.app_security_dm"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:140611470101:subnet/subnet-0b00022d8841eb12f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b00022d8841eb12f",
            "map_public_ip_on_launch": false,
            "owner_id": "140611470101",
            "tags": {
              "name": "Eng48-dilan-app"
            },
            "vpc_id": "vpc-021865930a930ef9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.db",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:140611470101:subnet/subnet-0df39404fa19fd8c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0df39404fa19fd8c5",
            "map_public_ip_on_launch": false,
            "owner_id": "140611470101",
            "tags": {
              "name": "Eng48-dilan-app"
            },
            "vpc_id": "vpc-021865930a930ef9a"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:140611470101:vpc/vpc-021865930a930ef9a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0316bec1615fcf45f",
            "default_route_table_id": "rtb-0a554ff172e3f7d4e",
            "default_security_group_id": "sg-03c469004da7db62c",
            "dhcp_options_id": "dopt-c0faa4a6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-021865930a930ef9a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a554ff172e3f7d4e",
            "owner_id": "140611470101",
            "tags": {
              "Name": "Eng48-dilan-app"
            }
          }
        }
      ]
    }
  ]
}